# personal-website

./: .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  .pr_agent.toml  Badanie programistów Calculated.xlsx  Dockerfile  Jak stworzyć profesjonalną stronę internetową kro....md  README.md  SURVEY_IMPLEMENTATION.md  ankieta.txt  app.vue  components.json  docker-compose.yaml  error.vue  index.html  jest.config.cjs  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.css  vitest.config.ts
.github/: copilot-instructions.md  performance-budget.json
Nginx/: Dockerfile  nginx.conf
assets/: cookieconsent.css  index.css
backend/: .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json  webpack.config.js
backend/src/: index.ts  main.rs
components/: BackButton.vue  Benefits.vue  Bio.vue  BlogPost.vue  CTASection.vue  CareerTimeline.vue  Comparison.vue  ContactModal.vue  FAQ.vue  Footer.vue  Hero.vue  LatestBlogPosts.vue  Navbar.vue  Pricing.vue  Process.vue  RealizedProjects.vue  ServiceCard.vue  Services.vue  Testimonials.vue
composables/: useCalculator.ts  useContentItems.ts  useMouseState.ts
const/: contentItems.ts  defaultLocale.ts  feedback.ts  pricing.ts  subscriptionTools.ts  survey.ts  userSegments.ts
coverage/: clover.xml  coverage-final.json  lcov.info
frontend/: Dockerfile  app.vue  error.vue  i18n.config.ts  index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
lib/: currency.ts  utils.ts
pages/: index.vue
plugins/: cookieconsent.client.ts  toast.ts  (+1 more)
(+228 files in other folders)
