[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lettre = "0.11.4"
lettre_email = "0.9.4"
openssl-sys = "0.9.82"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]
